Ad cards and filter and style it

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -66,6 +66,9 @@
     <!-- site style -->
     <link href="{% static 'css/base2.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/header.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/cards.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/header-filter.css' %}" rel="stylesheet" type="text/css">
+
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
 
