--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,6 +9,76 @@
     </div>
     <img src="{% static 'images/hero-images/macao-beach.jpg'%}" alt="Beautiful beach in Punta Cana" class="header-image">
 </header>
+
+
+<div class="header-filter">
+    <span class="experience-count">113 Experiences</span>
+    <div class="sort">
+        <span>Sort by: </span>
+        <select id="sort-options">
+            <option value="popularity" selected>Popularity</option>
+            <!-- Add other sorting options here -->
+        </select>
+    </div>
+</div>
+ <!-- cards -->
+     <div class="card-container">
+         <div class="card">
+             <img src="image1.jpg" alt="Tour Image">
+             <div class="content">
+                 <div class="tag">ACTIVITIES</div>
+                 <h3>Terracross Tour of the Countryside</h3>
+                 <p>There are few better ways to see the unspoilt Dominican countryside...</p>
+                 <div class="rating-price">
+                     <span>⭐ 4.4/5 (20)</span>
+                     <span class="price">$98.40</span>
+                 </div>
+             </div>
+         </div>
+ 
+         <div class="card">
+             <img src="image2.jpg" alt="Tour Image">
+             <div class="content">
+                 <div class="tag">ACTIVITIES</div>
+                 <h3>Saona Island Cruise with Private Beach</h3>
+                 <p>Better relaxation awaits on this trip to Saona Island...</p>
+                 <div class="rating-price">
+                     <span>⭐ 4.4/5 (106)</span>
+                     <span class="price">$128.22</span>
+                 </div>
+             </div>
+         </div>
+         <div class="card">
+            <img src="image2.jpg" alt="Tour Image">
+            <div class="content">
+                <div class="tag">ACTIVITIES</div>
+                <h3>Saona Island Cruise with Private Beach</h3>
+                <p>Better relaxation awaits on this trip to Saona Island...</p>
+                <div class="rating-price">
+                    <span>⭐ 4.4/5 (106)</span>
+                    <span class="price">$128.22</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="image2.jpg" alt="Tour Image">
+            <div class="content">
+                <div class="tag">ACTIVITIES</div>
+                <h3>Saona Island Cruise with Private Beach</h3>
+                <p>Better relaxation awaits on this trip to Saona Island...</p>
+                <div class="rating-price">
+                    <span>⭐ 4.4/5 (106)</span>
+                    <span class="price">$128.22</span>
+                </div>
+            </div>
+        </div>
+
+ 
+         <!-- Add more cards here -->
+     </div>
+ 
+
 <script src="{% static 'js/hero-img.js' %}"></script>
 
 {% endblock content %}
