--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -60,3 +60,23 @@
     font-weight: bold;
     color: #007bff;
 }
+
+
+.card-container .book-btn {
+    padding: 10px 20px;
+    background-color: orange;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.card-container .book-btn:hover {
+    background-color: rgb(215, 144, 12);
+}
+
+.action{
+    padding: 10px;
+}
