--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -119,6 +119,13 @@ font-size: 14px;
     color: var(--Yellow_lighter);
 }
 
+/* -------------------------------------------------------------------- navbar main*/
+
+
+
+
+
+
 
 /* -------------------------------------------------------------------- navbar */
 
