--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 0 20px;
+    font-size: 15px;
   }
   
   .footer-section {
@@ -20,10 +21,12 @@
   .footer-section h4 {
     border-bottom: 2px solid rgb(170, 113, 7);
     margin-bottom: 10px;
+    font-size:20px;
   }
   
   .footer-section ul {
     list-style: none;
+    padding-left: 0;
   }
   
   .footer-section ul li {
@@ -45,7 +48,7 @@
   
   .footer-bottom {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
     align-items: center;
     padding: 10px 20px;
     background-color: orange;
@@ -60,9 +63,8 @@
     margin-left: 10px;
   }
   
-  .social-icons a img {
-    width: 24px;
-    height: 24px;
+  .social-icons {
+    font-size: 25px;
   }
   .footer-brand img{
         width: 250px !important;
@@ -70,6 +72,10 @@
   
   /* Mobile responsiveness */
   @media (max-width: 768px) {
+    .footer-brand{
+    margin: auto;
+    padding: 20px;
+}
     .footer-container {
       flex-direction: column;
       text-align: center;
