--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,64 +1,65 @@
 {% load static %}
-  <!-- Footer Section -->
-  <footer>
-    <div class="footer-container">
-      <div class="footer-brand">
-        <a href="{% url 'excursions' %}">
-            <img src="{% static 'images/excursions/Logo.png' %}" alt="Punta Cana Discovery Logo">
-        </a>
+<!-- Footer Section -->
+<footer>
+  <div class="footer-container">
+    <div class="footer-brand">
+      <a href="{% url 'excursions' %}">
+        <img src="{% static 'images/excursions/Logo.png' %}" alt="Punta Cana Discovery Logo">
+      </a>
     </div>
-      <div class="footer-section">
-        <h4>Explore Our Services and Resources</h4>
-        <ul>
-          <li><a href="#" title="Learn More About Our Company">About Us</a></li>
-          <li><a href="#" title="Book Airport Transfers and Transportation">Transfers</a></li>
-          <li><a href="#" title="Explore Our Excursions and Tours">Excursions</a></li>
-          <li><a href="#" title="Plan and Attend Our Special Events">Events</a></li>
-          <li><a href="#" title="Read Our Latest Blog Posts and Articles">Blog</a></li>
-          <li><a href="#" title="Frequently Asked Questions and Answers">FAQs</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h4>Join Our Travel Advisors Program</h4>
-        <ul>
-          <li><a href="#" title="Learn More About Our Affiliation Program">Affiliation Program</a></li>
-          <li><a href="#" title="Sign Up for Our Travel Advisors Program">Sign Up</a></li>
-          <li><a href="#" title="Log In to Manage Your Account">Log In</a></li>
-        </ul>
-      </div>
-      
-      <div class="footer-section">
-        <h4>Contact Us and Read Our Terms</h4>
-        <ul>
-          <li><a href="#" title="Contact Us Directly via Whatsapp">Contact us via Whatsapp</a></li>
-          <li><a href="#" title="Read Our Terms and Conditions">Terms & Conditions</a></li>
-          <li><a href="#" title="View Our Privacy Policy">Privacy Policy</a></li>
-          <li><a href="#" title="Review Our Cookies & Privacy Policy">Cookies & Privacy</a></li>
-          <li><a href="#" title="Navigate Our Site Map">Site map</a></li>
-        </ul>
-      </div>
-      
-      <div class="footer-section">
-        <h4>Contact Us in the Dominican Republic or UK</h4>
-        <p>Dominican Republic: +1 849-428-0723</p>
-        <p>United Kingdom: +44 7541-147-634</p>
-      </div>
-      
+    <div class="footer-section">
+      <h4>Explore Our Services and Resources</h4>
+      <ul>
+        <li><a href="#" title="Learn More About Our Company">About Us</a></li>
+        <li><a href="#" title="Book Airport Transfers and Transportation">Transfers</a></li>
+        <li><a href="#" title="Explore Our Excursions and Tours">Excursions</a></li>
+        <li><a href="#" title="Plan and Attend Our Special Events">Events</a></li>
+        <li><a href="#" title="Read Our Latest Blog Posts and Articles">Blog</a></li>
+        <li><a href="#" title="Frequently Asked Questions and Answers">FAQs</a></li>
+      </ul>
     </div>
 
-    <div class="footer-bottom">
-      <p>&copy; Copyright 2024 Punta Cana Discovery</p>
-      <div class="social-icons">
-        <a aria-label="facebook" rel="noopener" alt="Facebook"  href="https://www.facebook.com/" target="_blank"><i
-            class="fa-brands fa-facebook"></i></a>
-        <a aria-label="twitter" alt="X (Twitter)" rel="noopener" target="_blank" href="https://twitter.com/"><i
-            class="fa-brands fa-twitter"></i></a>
-        <a aria-label="tiktok" rel="noopener" alt="tic toc" target="_blank" href="https://www.tiktok.com/"><i
-                class="fa-brands fa-tiktok"></i></a>
-        <a aria-label="instagram" alt="Instagram" rel="noopener" href="https://www.instagram.com/" target="_blank"><i
-            class="fa-brands fa-instagram"></i></a>
-        <a aria-label="youtube" alt="Youtube" rel="noopener" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-      </div>
+    <div class="footer-section">
+      <h4>Join Our Travel Advisors Program</h4>
+      <ul>
+        <li><a href="#" title="Learn More About Our Affiliation Program">Affiliation Program</a></li>
+        <li><a href="#" title="Sign Up for Our Travel Advisors Program">Sign Up</a></li>
+        <li><a href="#" title="Log In to Manage Your Account">Log In</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-section">
+      <h4>Contact Us and Read Our Terms</h4>
+      <ul>
+        <li><a href="https://api.whatsapp.com/send?phone=18094614942" title="Contact Us Directly via Whatsapp">Contact us via Whatsapp</a></li>
+        <li><a href="#" title="Read Our Terms and Conditions">Terms & Conditions</a></li>
+        <li><a href="#" title="View Our Privacy Policy">Privacy Policy</a></li>
+        <li><a href="#" title="Review Our Cookies & Privacy Policy">Cookies & Privacy</a></li>
+        <li><a href="#" title="Navigate Our Site Map">Site map</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h4>Contact Us in the Dominican Republic or UK</h4>
+      <p>Dominican Republic: +18094614942</p>
+      <p>United Kingdom: +44 7541-147-634</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; Copyright 2024 Punta Cana Discovery</p>
+    <div class="social-icons">
+      <a aria-label="facebook" rel="noopener" alt="Facebook" href="https://www.facebook.com/" target="_blank"><i
+          class="fa-brands fa-facebook"></i></a>
+      <a aria-label="twitter" alt="X (Twitter)" rel="noopener" target="_blank" href="https://twitter.com/"><i
+          class="fa-brands fa-twitter"></i></a>
+      <a aria-label="tiktok" rel="noopener" alt="tic toc" target="_blank" href="https://www.tiktok.com/"><i
+          class="fa-brands fa-tiktok"></i></a>
+      <a aria-label="instagram" alt="Instagram" rel="noopener" href="https://www.instagram.com/" target="_blank"><i
+          class="fa-brands fa-instagram"></i></a>
+      <a aria-label="youtube" alt="Youtube" rel="noopener" href="https://www.youtube.com/" target="_blank"><i
+          class="fa-brands fa-youtube"></i></a>
+    </div>
+  </div>
+</footer>
