--- a/templates/base2.html
+++ b/templates/base2.html
@@ -69,6 +69,7 @@
     <link href="{% static 'css/cards.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/header-filter.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/footer.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/static-pages.css' %}" rel="stylesheet" type="text/css">
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
 
@@ -77,6 +78,11 @@
     <!-- Main Content -->
     {% endblock %}
     <script src="{% static 'js/header.js' %}"></script>
+        <!--Bootstrap 5.2 Javascript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
     {% include 'footer.html' %}
 </body>
 
