--- a/static/css/base2.css
+++ b/static/css/base2.css
@@ -8,7 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: white;
 }
 
 
@@ -49,7 +49,7 @@ body {
     text-decoration: none;
     color: #002e5d;
 }
-
+ 
 /* Mobile Navigation */
 .mobile-nav {
     display: none; /* Hidden by default */
