--- a/templates/base2.html
+++ b/templates/base2.html
@@ -70,6 +70,10 @@
     <link href="{% static 'css/header-filter.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/footer.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/static-pages.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/detail-page.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/cart.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/calender.css' %}" rel="stylesheet" type="text/css">
+
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
 
@@ -77,13 +81,17 @@
     {% block content %}
     <!-- Main Content -->
     {% endblock %}
-    <script src="{% static 'js/header.js' %}"></script>
-        <!--Bootstrap 5.2 Javascript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
 
     {% include 'footer.html' %}
+    <script src="{% static 'js/header.js' %}"></script>
+    <!--Bootstrap 5.2 Javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+        <!-- jQuery -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </body>
 
 </html>
