Add new review section

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -73,6 +73,8 @@
     <link href="{% static 'css/detail-page.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/cart.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/calender.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/reviews-section.css' %}" rel="stylesheet" type="text/css">
+
 
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
