--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -239,7 +239,7 @@
 
 <!-- reviews sections -->
 <div class="reviews-section">
-  <h2>What people say about this experience</h2>
+  <h2 class="text-center">What people say about this experience</h2>
   <div class="overall-rating">
     <h3>
       {% if excursions.get_average_rating >= 5 %}
