fix select input

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -101,7 +101,7 @@
       <h2><i class="fas fa-calendar-alt"></i> Availability and Prices</h2>
       <div class="availability">
         <label for="pickup-point"><i class="fas fa-map-marker-alt"></i> Select pickup point:</label>
-        <select id="pickup-point" name="place_pickup" required>
+        <select id="pickup-point" name="place_pickup" required class="form-select mt-3">
           <option value="" disabled selected>Select a resort</option>
           <option>Bahia Principe Fantasia Punta Cana</option>
           <option>Bahia Principe Grand Aquamarine (Adults Only)</option>
@@ -238,7 +238,7 @@
 
 
 <!-- reviews sections -->
-<div class="reviews-section">
+<div class="reviews-section" id="reviews">
   <h2 class="text-center">What people say about this experience</h2>
   <div class="overall-rating">
     <h3>
