--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -77,7 +77,7 @@ tours, thrilling activities, and unique experiences in the Dominican Republic. {
                 </div>
                 <div class="action">
                     <a href="{% url 'excursion_detail' excursion.slugy %}" class="book-link">
-                        <button class="book-btn">Book Now</button>
+                        <button class="book-btn">Learn More</button>
                     </a>
                 </div>
             </div>
