--- a/staticfiles/css/detail-page.css
+++ b/staticfiles/css/detail-page.css
@@ -122,7 +122,17 @@ header {
     }
   }
 
-
+  /* excursion description */
+  .excursion-overview{
+    max-width: 1200px;
+    background-color: #fff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    margin: auto;
+    margin-bottom: 40px;
+    padding: 20px;
+  }
 
   /* tour info */
   
@@ -317,9 +327,14 @@ header {
   .tour-info-container {
     flex-direction: column;
   }
+
   .tour-info-container  .tour-info{
     width: 100%;
   }
+    /* excursion description */
+    .excursion-overview{
+      max-width: 90%;
+    }
 
   .tour-info, .booking-form {
     padding: 20px;
